# convertit-libs

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  gradle.properties  jitpack.yml  settings.gradle.kts
.github/workflows/: publish-github-packages.yml  publish-maven-central.yml
app/: build.gradle.kts
app/src/androidTest/java/org/thebytearray/convertitlibs/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/thebytearray/convertitlibs/: MainActivity.kt
app/src/main/java/org/thebytearray/convertitlibs/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/thebytearray/convertitlibs/: ExampleUnitTest.kt
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/org/thebytearray/convertit/gradle/: AndroidApplicationConventionPlugin.kt  AndroidLibraryConventionPlugin.kt  KotlinAndroid.kt
core/native/exiv2/: build.gradle.kts  consumer-rules.pro
core/native/exiv2/src/androidTest/java/org/thebytearray/exiv2_android/: ExampleInstrumentedTest.kt
core/native/exiv2/src/main/cpp/: CMakeLists.txt  exiv2_android.cpp
core/native/exiv2/src/main/cpp/cmake/: Findfmt.cmake
core/native/exiv2/src/main/java/org/thebytearray/exiv2_android/: Exiv2Android.kt
core/native/exiv2/src/test/java/org/thebytearray/exiv2_android/: ExampleUnitTest.kt
core/native/ffmpeg-kit/: build.gradle.kts  consumer-rules.pro
core/native/ffmpeg-kit/src/androidTest/java/org/thebytearray/ffmpeg_kit_android/: ExampleInstrumentedTest.kt
core/native/ffmpeg-kit/src/main/java/org/thebytearray/ffmpeg_kit_android/: FfmpegKitPrebuilt.kt
core/native/ffmpeg-kit/src/main/jniLibs/: README.txt
core/native/ffmpeg-kit/src/test/java/org/thebytearray/ffmpeg_kit_android/: ExampleUnitTest.kt
core/native/image-magick/: build.gradle.kts  consumer-rules.pro
core/native/image-magick/src/androidTest/java/org/thebytearray/image_magick_android/: ExampleInstrumentedTest.kt
core/native/image-magick/src/main/assets/usr/etc/ImageMagick-7/: configure.xml
core/native/image-magick/src/main/java/org/thebytearray/image_magick_android/: ImageMagickRunner.kt
core/native/image-magick/src/main/jniLibs/: README.txt
core/native/image-magick/src/test/java/org/thebytearray/image_magick_android/: ExampleUnitTest.kt
core/native/taglib/: build.gradle.kts  consumer-rules.pro
core/native/taglib/src/androidTest/java/org/thebytearray/taglib_android/: ExampleInstrumentedTest.kt
core/native/taglib/src/main/cpp/: CMakeLists.txt  fileref_ext.h  taglib_android.cpp  utils.h
core/native/taglib/src/main/java/org/thebytearray/taglib_android/: AudioProperties.kt  AudioPropertiesReadStyle.kt  Metadata.kt  Picture.kt  PropertyMap.kt  TagLib.kt
core/native/taglib/src/test/java/org/thebytearray/taglib_android/: ExampleUnitTest.kt
docs/: native-libraries.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: fetch-imagemagick-jnilibs.sh  fetch_imagemagick_jnilibs.py
